# loongcollector

./: .gitignore  Makefile  README.md  go.mod  go.sum
.devcontainer/: Dockerfile  Dockerfile.lldb  README.md  devcontainer.json  gen_env.sh
.github/workflows/: auto-release.yaml  claude.yaml  e2e.yaml  release-edge.yaml  static-check.yaml
core/: CMakeLists.txt  dependencies.cmake  links.cmake
core/app_config/: AppConfig.cpp  AppConfig.h
core/application/: Application.cpp
core/checkpoint/: AdhocCheckpointManager.cpp  AdhocJobCheckpoint.cpp  CheckPointManager.cpp  CheckpointManagerV2.cpp
core/collection_pipeline/: CollectionPipeline.cpp  CollectionPipeline.h  CollectionPipelineContext.h  CollectionPipelineManager.cpp  CollectionPipelineManager.h  GlobalConfig.cpp  GlobalConfig.h
core/collection_pipeline/batch/: Batcher.h
core/collection_pipeline/plugin/: PluginRegistry.cpp  PluginRegistry.h
core/collection_pipeline/queue/: ExactlyOnceQueueManager.h  ExactlyOnceSenderQueue.h  SLSSenderQueueItem.h
core/collection_pipeline/serializer/: JsonSerializer.cpp  SLSSerializer.cpp
core/common/: EcsMetaData.cpp  EcsMetaData.h  EncodingConverter.cpp  EnvUtil.cpp  EnvUtil.h  FileSystemUtil.cpp  FileSystemUtil.h  JsonUtil.cpp  JsonUtil.h  LogtailCommonFlags.cpp  LogtailCommonFlags.h  MachineInfoUtil.cpp  MachineInfoUtil.h  ParamExtractor.cpp  ParamExtractor.h  ProcParser.cpp  RuntimeUtil.cpp  StringTools.cpp  StringTools.h  TimeUtil.cpp  TimeUtil.h  Wildcard.h
core/common/memory/: SourceBuffer.h
core/config/: CollectionConfig.cpp  CollectionConfig.h  OnetimeConfigInfoManager.cpp  OnetimeConfigInfoManager.h  PipelineConfig.cpp  PipelineConfig.h  TaskConfig.h
core/config/common_provider/: CommonConfigProvider.cpp  CommonConfigProvider.h
core/config/feedbacker/: ConfigFeedbackReceiver.cpp  ConfigFeedbackReceiver.h  ConfigFeedbackable.h
core/config/provider/: ConfigProvider.cpp  ConfigProvider.h
core/config/watcher/: PipelineConfigWatcher.cpp  PipelineConfigWatcher.h
core/constants/: Constants.cpp  Constants.h  SpanConstants.cpp  SpanConstants.h
core/ebpf/: Config.cpp  Config.h  EBPFAdapter.cpp  EBPFAdapter.h  EBPFServer.cpp  EBPFServer.h
core/ebpf/driver/: BPFWrapper.h  CMakeLists.txt  CpuProfiler.h  CpuProfilingAdapter.h  FileFilter.cpp  FileFilter.h  Livetrace.h  eBPFDriver.cpp  eBPFDriver.h  livetrace.h
core/ebpf/include/: export.h
core/ebpf/plugin/: AbstractManager.cpp  AbstractManager.h  FileRetryableEvent.cpp  FileRetryableEvent.h  ProcessCache.cpp  ProcessCache.h  ProcessCacheManager.cpp  ProcessCacheManager.h  ProcessCacheValue.cpp  ProcessCacheValue.h  ProcessCleanupRetryableEvent.cpp  ProcessCloneRetryableEvent.cpp  ProcessExecveRetryableEvent.cpp  ProcessExecveRetryableEvent.h  ProcessExitRetryableEvent.cpp  ProcessSyncRetryableEvent.cpp
core/ebpf/protocol/: AbstractParser.h  ProtocolParser.cpp  ProtocolParser.h
core/ebpf/type/: CommonDataEvent.h  FileEvent.h  NetworkEvent.h  NetworkObserverEvent.h  ProcessEvent.h  ProfilingEvent.h
core/ebpf/util/: AggregateTree.h  Converger.cpp  Converger.h
core/file_server/: ConfigManager.cpp  EventDispatcher.cpp  EventDispatcher.h  FileDiscoveryOptions.cpp  FileDiscoveryOptions.h  FileServer.cpp  MultilineOptions.cpp  StaticFileServer.cpp  StaticFileServer.h
core/file_server/checkpoint/: CheckPointManager.cpp  CheckPointManager.h  CheckpointManagerV2.cpp  CheckpointManagerV2.h  FileCheckpoint.cpp  FileCheckpoint.h  InputStaticFileCheckpoint.cpp  InputStaticFileCheckpoint.h  InputStaticFileCheckpointManager.cpp  InputStaticFileCheckpointManager.h  RangeCheckpoint.cpp
core/file_server/event/: BlockEventManager.cpp
core/file_server/event_handler/: EventHandler.cpp  LogInput.cpp
core/file_server/event_listener/: EventListener_Linux.cpp
core/file_server/polling/: PollingDirFile.cpp  PollingModify.cpp
core/go_pipeline/: LogtailPlugin.cpp
core/host_monitor/: Constants.cpp  Constants.h  HostMonitorContext.cpp  HostMonitorContext.h  HostMonitorInputRunner.cpp  HostMonitorInputRunner.h  HostMonitorTimerEvent.cpp  HostMonitorTimerEvent.h  HostMonitorTypes.h  LinuxSystemInterface.cpp  LinuxSystemInterface.h  SystemInterface.cpp  SystemInterface.h
core/metadata/: ContainerMetadata.h  K8sMetadata.cpp  K8sMetadata.h
core/models/: PipelineEventGroup.cpp  PipelineEventGroup.h
core/monitor/: AlarmManager.cpp  AlarmManager.h  Monitor.cpp
core/prometheus/: PrometheusInputRunner.cpp
core/runner/: FlusherRunner.cpp  FlusherRunner.h  InputRunner.h  ProcessorRunner.cpp
core/task_pipeline/: TaskPipeline.cpp  TaskPipeline.h  TaskPipelineManager.cpp
core/unittest/: CMakeLists.txt
core/unittest/config/: CMakeLists.txt  CollectionConfigUnittest.cpp  CommonConfigProviderUnittest.cpp  ConfigFeedbackReceiverUnittest.cpp  OnetimeConfigInfoManagerUnittest.cpp  OnetimeConfigUpdateUnittest.cpp  PipelineConfigUnittest.cpp  SingletonInputCollectionConfigUpdateUnittest.cpp  TaskConfigUnittest.cpp
core/unittest/processor_simd/: CMakeLists.txt
docker/: Dockerfile_build  Dockerfile_coverage  Dockerfile_development_part  Dockerfile_edge_linux  Dockerfile_release  README.md
licenses/: LICENSE_OF_ILOGTAIL_DEPENDENCIES.md  LICENSE_OF_TESTENGINE_DEPENDENCIES.md
pkg/: context.go  go.mod  go.sum
pkg/flags/: flags.go
pkg/helper/: dumper.go  env_tags.go  go_kit_log_wrapper.go  input_manager_helper.go  service_helper.go
pkg/logger/: logger.go  logger_test.go  option_test.go
pkg/models/: pipeline.go
pkg/selfmonitor/: alarm_constants.go  alarm_imp.go  metrics_imp_v2.go
pkg/util/: util.go  util_test.go
plugin_main/: plugin_export.go  plugin_http.go  plugin_main.go
pluginmanager/: pipeline_context_wrapper.go  plugin_wrapper_aggregator_v2.go  plugin_wrapper_flusher_v2.go  plugin_wrapper_metric_v2.go  plugin_wrapper_processor_v2.go  plugin_wrapper_service_v2.go  self_telemetry_alarm.go
scripts/: build_edge_linux.sh  e2e.sh  gen_build_scripts.sh  gen_release_markdown.sh  windows64_build.bat
test/: go.mod  go.sum
test/config/: config.go  load.go
test/e2e/: e2e_docker_test.go
test/engine/: steps.go
(+360 files in other folders)
